@@ -288,3 +288,4 @@
 20031020 fuse.c, trdos.c, utils.c: use libspectrum_identify_file_with_class
 	 where appropriate.
 20031020 utils.c: use TMPDIR before /tmp for temporary files.
+20031023 Add simple 'poke finder'.
